<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/grey">


            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/weather_unknown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/weather_humidity_container"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
                app:layout_constraintStart_toEndOf="@+id/weather_icon"
                app:layout_constraintTop_toTopOf="@+id/weather_icon"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/weather_humidity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_humidity_title"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weather_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_humidity"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_humidity_title" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/weather_pressure_container"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
                app:layout_constraintEnd_toStartOf="@+id/weather_temp_container"
                app:layout_constraintStart_toEndOf="@+id/weather_humidity_container"
                app:layout_constraintTop_toTopOf="@+id/weather_icon">

                <TextView
                    android:id="@+id/weather_pressure_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_pressure_title"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weather_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_humidity"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_pressure_title" />

            </android.support.constraint.ConstraintLayout>



            <android.support.constraint.ConstraintLayout
                android:id="@+id/weather_temp_container"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weather_icon">

                <TextView
                    android:id="@+id/weather_temp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_temp_title"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weather_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_temp"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_temp_title" />

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>